--- a/3diena/mogo-projektas/styles/abstracts/_variables.scss
+++ b/3diena/mogo-projektas/styles/abstracts/_variables.scss
@@ -6,24 +6,41 @@ $roboto: 'Roboto', sans-serif;
 
 // font sizes from design
 
-$extralarge: 150px;
-$large: 72px;
-$ml: 46px;
-$medium: 30px;
-$smaller: 24px;
-$ssmaller: 18px;
-$small: 15px;
-$extrasmall: 14px;
-$ssmallest: 13px;
-$smallest: 12px;
+$extralarge: 9.375rem;
+$large: 4.5rem;
+$ml: 2.875rem;
+$medium: 1.875rem;
+$smaller: 1.5rem;
+$ssmaller: 1.125rem;
+$small: 0.938rem;
+$extrasmall: 0.875rem;
+$ssmallest: 0.813rem;
+$smallest: 0.75rem;
+
+// $extralarge: 150px;
+// $large: 72px;
+// $ml: 46px;
+// $medium: 30px;
+// $smaller: 24px;
+// $ssmaller: 18px;
+// $small: 15px;
+// $extrasmall: 14px;
+// $ssmallest: 13px;
+// $smallest: 12px;
 
 // fonts sizes for breakpoints
 
-$xxlg: 120px;
-$xlg: 100px;
-$mlg: 60px;
-$emlg: 55px;
-$xxs: 10px;
+$xxlg: 7.5rem;
+$xlg: 6.25rem;
+$mlg: 3.75rem;
+$emlg: 3.438rem;
+$xxs: 0.625rem;
+
+// $xxlg: 120px;
+// $xlg: 100px;
+// $mlg: 60px;
+// $emlg: 55px;
+// $xxs: 10px;
 
 // colors
 
@@ -32,6 +49,7 @@ $lightyellow: #f7ebc5;
 $textwhite: #ffffff;
 $salmon: #f38181;
 $lightgrey: #e5e5e5;
+$lightergrey: #f5f5f5;
 $grey: #cccccc;
 $textgrey: #999999;
 $mint: #95e1d3;
