--- a/3diena/mogo-projektas/styles/pages/_about.scss
+++ b/3diena/mogo-projektas/styles/pages/_about.scss
@@ -5,10 +5,55 @@
   margin: 90px 0 110px 0;
 
   .image-row {
-    img {
-      margin: 0 7px;
+    .image {
+      display: inline-block;
+      position: relative;
+
+      img {
+        margin: 0 7px;
+        width: 100%;
+        max-width: 380px;
+        height: 250px;
+      }
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 100%;
       width: 100%;
       max-width: 380px;
+      opacity: 0;
+      transition: .5s ease;
+      background-image: linear-gradient(to bottom right, $salmon, #e9d182);
+      margin: 0 7px;
+    }
+
+    .image:hover .overlay {
+      opacity: 0.9;
+    }
+
+    .text {
+      text-align: center;
+      padding-top: 95px;
+
+      h4 {
+        font-size: $ssmaller;
+        color: $textwhite;
+        font-family: $montserrat;
+        font-weight: bold;
+      }
+
+      img {
+        width: 100%;
+        max-width: 30px;
+        padding-bottom: 10px;
+        height: 20px;
+        margin: 0 auto;
+      }
     }
   }
 }
@@ -42,11 +87,16 @@
 @media only screen and (max-width: $extra-large-breakpoint) {
   #about {
     .image-row {
-      img {
-        width: 90%;
-        max-width: 380px;
+      .image {
         display: block;
         margin: 0 auto;
+        width: 90%;
+        max-width: 380px;
+        padding-bottom: 20px;
+
+        .overlay {
+          height: 250px;
+        }
       }
     }
   }
@@ -61,7 +111,7 @@
 
     .stat-info {
       width: 19%;
-      padding: 80px 0px;
+      padding: 80px 0;
 
       p {
         font-size: $smallest;
