--- a/3diena/mogo-projektas/styles/pages/_home.scss
+++ b/3diena/mogo-projektas/styles/pages/_home.scss
@@ -1,28 +1,25 @@
 // home section background
 #home {
   height: 100vh;
-
-  // home section background
-  header {
-    background: url('../images/home_background_image.jpg') center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-sizing: border-box;
-  }
+  background: url('../images/home_background_image.jpg') center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-sizing: border-box;
 
   // home section content 
 
   .content {
     max-width: 1200px;
+    width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
 
     h2 {
-      margin: 150px 0 45px 0;
+      margin: 150px 0 35px 0;
     }
 
     h1 {
-      margin: 0 50px 30px 50px;
+      margin: 20px 50px 30px 50px;
     }
 
     button {
@@ -34,8 +31,10 @@
 
     .main-bottom {
       max-width: 1200px;
+      width: 100%;
       margin: 0 auto;
-      box-sizing: border-box;
+      position: absolute;
+      bottom: 0;
 
       h4 {
         display: inline;
@@ -50,7 +49,7 @@
         width: 23%;
 
         div {
-          margin-bottom: 25px;
+          margin-bottom: 20px;
         }
       }
     }
@@ -80,8 +79,6 @@
 
 @media only screen and (min-width: $medium-breakpoint) and (max-width: $large-breakpoint) {
   #home {
-    height: 100%;
-
     .content {
       h1 {
         font-size: $xlg;
@@ -113,7 +110,6 @@
 
 @media only screen and (min-width: $small-breakpoint) and (max-width: $medium-breakpoint) {
   #home {
-    height: 100%;
 
     .content {
       h1 {
@@ -123,7 +119,7 @@
 
       h2 {
         font-size: $ml;
-        margin: 90px 0 25px 0;
+        margin: 140px 0 25px 0;
       }
 
       button {
@@ -158,19 +154,18 @@
 
 @media only screen and (max-width: $small-breakpoint) {
   #home {
-    height: 100%;
 
     .content {
       text-align: center;
 
       h1 {
-        font-size: $emlg;
+        font-size: $mlg;
         margin: 0 40px 30px 40px;
       }
 
       h2 {
         font-size: $medium;
-        margin: 80px 0 30px 0;
+        margin: 130px 0 30px 0;
       }
 
       button {
